# chatWithPDF

./: .dockerignore  .gitignore  App.py  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt
modules/: __init__.py  process_data.py
tests/: test_app.py
utilities/: __init__.py  utils.py
utilities/Styles/: main.css
